# olcUTIL_Geometry2D

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  LICENCE.md  README.md  TEST_Geometry2D.cpp  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  olcPGEX_QuickGUI.h  olcPixelGameEngine.h  olcUTIL_Geometry2D.h  olcUTIL_Geometry2D.sln
.github/workflows/: code_coverage.yml
TEST_Geometry2D.dir/Debug/: TEST_Geometry2D.exe.recipe
TEST_Geometry2D.dir/Debug/TEST_Geometry2D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  TEST_Geometry2D.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cmake/: coverage.cmake
edition/: funcs.h
tests/: test_circle.cpp
